# cppgl

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: anim.h  buffer.h  camera.h  cassert.h  common.h  context.h  cppgl.h  data_types.h  debug.h  drawelement.h  framebuffer.h  geometry.h  gui.h  image_load_store.h  material.h  mesh.h  mesh_templates.h  mesh_utils.h  named_handle.h  platform.h  quad.h  query.h  shader.h  texture.h
include/imgui/: imgui.h  imgui_stdlib.h
include/internal/: filesystem.h  filesystem_ops.h  internal.h
include/math/: eigen_glm_interface.h  eigen_util_funcs.h  exp_coords.h  math.h  math_ops.h  quaternion.h  random.h
include/utils/: colors.h  eigen_utils.h  utils.h
src/: CMakeLists.txt  anim.cpp  camera.cpp  context.cpp  debug.cpp  drawelement.cpp  framebuffer.cpp  geometry.cpp  gui.cpp  image_load_store.cpp  material.cpp  mesh.cpp  mesh_templates.cpp  mesh_utils.cpp  query.cpp  shader.cpp  texture.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/internal/: filesystem_ops.cpp
src/math/: eigen_glm_interface.cpp  quaternion.cpp  random.cpp
